# odec

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a  main.cpp
include/odec/capstone2llvmir/: capstone2llvmir.h  capstone2llvmir_impl.h  capstone_utils.h  exceptions.h  llvmir_utils.h
include/odec/capstone2llvmir/x86/: x86.h  x86_defs.h  x86_impl.h
include/odec/common/: address.h  range.h
include/odec/fileinfo/: ftypes.h
include/odec/fileinfo/file_detector/: detector_factory.h  elf_detector.h
include/odec/fileinfo/fileformat/: fileformat.h
include/odec/fileinfo/fileformat/section/: section.h
include/odec/fileinfo/util/: crypto.h  format_detector.h
include/odec/utils/: conversion.h  crc32.h  os.h  string.h  time.h
include/odec/utils/io/: log.h  logger.h
src/: CMakeLists.txt
src/capstone2llvmir/: CMakeLists.txt  capstone2llvmir.cpp  capstone2llvmir_impl.cpp  exceptions.cpp  llvmir_utils.cpp
src/capstone2llvmir/x86/: x86.cpp  x86_init.cpp
src/common/: CMakeLists.txt  address.cpp
src/fileinfo/: CMakeLists.txt  fileinfo.cpp
src/fileinfo/fileformat/section/: section.cpp
src/fileinfo/util/: crypto.cpp  format_detector.cpp
src/utils/: CMakeLists.txt  conversion.cpp  crc32.cpp  string.cpp  time.cpp
src/utils/io/: log.cpp  logger.cpp
test/: CMakeLists.txt  capstone2llvmtools.cpp
